--- a/API_FrameWork.vcxproj
+++ b/API_FrameWork.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="MainProc.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="Stanley.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="WinMain.h" />
@@ -163,6 +164,7 @@
     <ClCompile Include="cImageManager.cpp" />
     <ClCompile Include="MainProc.cpp" />
     <ClCompile Include="Object.cpp" />
+    <ClCompile Include="Stanley.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
